--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
-    "@react-three/drei": "^9.101.0",
-    "@react-three/fiber": "^8.15.19",
+    "@react-three/drei": "^9.121.4",
+    "@react-three/fiber": "^8.17.14",
     "@sentry/react": "^7.106.0",
     "@sentry/vite-plugin": "^2.14.3",
     "gsap": "^3.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loading-indicators": "^1.0.0",
     "three": "^0.162.0"
   },
   "devDependencies": {
